--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav>
             <logo>MoGo</logo>
-            <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Service</a></li>
-                <li><a href="">Work</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
+            <ul class="nav-menu">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
