--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles/normalize.css" rel="stylesheet">
     <link href="./styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:ital,wght@0,400;1,300&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <title>module-06</title>
@@ -25,43 +27,47 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2><span>We work with</span>amazing servises</h2>
-            <ul>
-                <li>
+    <main class="container">
+        <section class="services">
+            <h2 class="services-title"><span>We work with</span>amazing servises</h2>
+            <ul class="services-list">
+                <li class="services-list-item">
                     <h3>Photography</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="services-list-item">
                     <h3>Web Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.Lorem
-                        ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="services-list-item">
                     <h3>Creativity</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="services-list-item">
                     <h3>Seo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="services-list-item">
                     <h3>Css/Html</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
-                <li>
+                <li class="services-list-item">
                     <h3>Digital</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis repellendus nobis harum.</p>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
+
             </ul>
         </section>
         <section>
-            <h2><span>Who we are</span>meet our team</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <h2>Meet our team</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore
+                et
                 dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
                 consequat.</p>
+            </>
             <ul>
                 <li>
                     <a href=""></a>
