continue team section

--- a/index.html
+++ b/index.html
@@ -32,54 +32,76 @@
             <h2 class="services-title"><span>We work with</span>amazing servises</h2>
             <ul class="services-list">
                 <li class="services-list-item">
-                    <h3>Photography</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-01"></div>
+                    <div class="service-description">
+                        <h3>Photography</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="services-list-item">
-                    <h3>Web Design</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-02"></div>
+                    <div class="service-description">
+                        <h3>Web Design</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="services-list-item">
-                    <h3>Creativity</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-03"></div>
+                    <div class="service-description">
+                        <h3>Creativity</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="services-list-item">
-                    <h3>Seo</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-04"></div>
+                    <div class="service-description">
+                        <h3>Seo</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="services-list-item">
-                    <h3>Css/Html</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-05"></div>
+                    <div class="service-description">
+                        <h3>Css/Html</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
                 <li class="services-list-item">
-                    <h3>Digital</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    <div class="icon icon-06"></div>
+                    <div class="service-description">
+                        <h3>Digital</h3>
+                        <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                 </li>
 
             </ul>
         </section>
-        <section>
-            <h2>Meet our team</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+        <section class="team">
+            <h2 class="team-title"><span>Who We Are</span>Meet our team</h2>
+            <p class="team-title-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut
                 labore
                 et
                 dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo
                 consequat.</p>
-            </>
-            <ul>
-                <li>
-                    <a href=""></a>
-                    <p>Matthew Dix</p>
-                    <p>Graphic Design</p>
+
+            <ul class="team-list">
+                <li class="team-list-item">
+                    <div class=team-overlay>
+                        <img class="team-image" src="./images/team-01.jpg" alt="team-Designer" width="380" height="470">
+                        <a href=""></a>
+                        <div class="overlay">
+                        </div>
+                    </div>
+                    <div class="team-description">
+                        <p>Matthew Dix</p>
+                        <p>Graphic Design</p>
+                    </div>
                 </li>
                 <li>
+                    <img src="./images/team-02.jpg" alt="team-Branding" width="380" height="470">
                     <a href=""></a>
                     <p>Christopher Campbell</p>
                     <p>Branding/UX design</p>
                 </li>
                 <li>
+                    <img src="./images/team-03.jpg" alt="team-Developer" width="380" height="470">
                     <a href=""></a>
                     <p>Michael Fertig </p>
                     <p>Developer</p>
