--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles/normalize.css" rel="stylesheet">
     <link href="./styles/style.css" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Roboto:ital,wght@0,400;1,300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <title>module-06</title>
@@ -85,34 +83,90 @@
                 <li class="team-list-item">
                     <div class=team-overlay>
                         <img class="team-image" src="./images/team-01.jpg" alt="team-Designer" width="380" height="470">
-                        <a href=""></a>
                         <div class="overlay">
+                            <ul class="social-buttons">
+                                <li>
+                                    <button class="button button-facebook"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-twitter"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-pinterest"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-insta"></button>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="team-description">
-                        <p>Matthew Dix</p>
-                        <p>Graphic Design</p>
+                        <p class="team-name">Matthew Dix</p>
+                        <p class="team-position">Graphic Design</p>
                     </div>
                 </li>
-                <li>
-                    <img src="./images/team-02.jpg" alt="team-Branding" width="380" height="470">
-                    <a href=""></a>
-                    <p>Christopher Campbell</p>
-                    <p>Branding/UX design</p>
+                <li class="team-list-item">
+                    <div class=team-overlay>
+                        <img class="team-image" src="./images/team-02.jpg" alt="team-Branding" width="380" height="470">
+                        <div class="overlay">
+                            <ul class="social-buttons">
+                                <li>
+                                    <button class="button button-facebook"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-twitter"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-pinterest"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-insta"></button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="team-description">
+                        <p class="team-name">Christopher Campbell</p>
+                        <p class="team-position">Branding/UX design</p>
+                    </div>
                 </li>
-                <li>
-                    <img src="./images/team-03.jpg" alt="team-Developer" width="380" height="470">
-                    <a href=""></a>
-                    <p>Michael Fertig </p>
-                    <p>Developer</p>
+                <li class="team-list-item">
+                    <div class=team-overlay>
+                        <img class="team-image" src="./images/team-03.jpg" alt="team-Developer" width="380"
+                            height="470">
+                        <div class="overlay">
+                            <ul class="social-buttons">
+                                <li>
+                                    <button class="button button-facebook"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-twitter"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-pinterest"></button>
+                                </li>
+                                <li>
+                                    <button class="button button-insta"></button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="team-description">
+                        <p class="team-name">Michael Fertig</p>
+                        <p class="team-position">Developer</p>
+                    </div>
                 </li>
             </ul>
-
-
         </section>
     </main>
-    <footer>
-
+    <footer class="container">
+        <div class="footer-content">
+            <p>&#169 2016 MoGo free PSD tamplate by <a href="#">Laaqiq</a></p>
+            <form action="#" class="contact-form">
+                <input type="email" class="contact-form__input" placeholder="Your Email...">
+                <button type="submit" class="contact-form__btn">Subscribe</button>
+            </form>
+        </div>
     </footer>
 </body>
 
