--- a/index.html
+++ b/index.html
@@ -34,38 +34,43 @@
                     <div class="service-description">
                         <h3>Photography</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
                 <li class="services-list-item">
                     <div class="icon icon-02"></div>
                     <div class="service-description">
                         <h3>Web Design</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
                 <li class="services-list-item">
                     <div class="icon icon-03"></div>
                     <div class="service-description">
                         <h3>Creativity</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
                 <li class="services-list-item">
                     <div class="icon icon-04"></div>
                     <div class="service-description">
                         <h3>Seo</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
                 <li class="services-list-item">
                     <div class="icon icon-05"></div>
                     <div class="service-description">
                         <h3>Css/Html</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
                 <li class="services-list-item">
                     <div class="icon icon-06"></div>
                     <div class="service-description">
                         <h3>Digital</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-
             </ul>
         </section>
         <section class="team">
@@ -161,7 +166,7 @@
     </main>
     <footer class="container">
         <div class="footer-content">
-            <p>&#169 2016 MoGo free PSD tamplate by <a href="#">Laaqiq</a></p>
+            <p>&#169; 2016 MoGo free PSD tamplate by <a href="#">Laaqiq</a></p>
             <form action="#" class="contact-form">
                 <input type="email" class="contact-form__input" placeholder="Your Email...">
                 <button type="submit" class="contact-form__btn">Subscribe</button>
