fixed mentors remarks

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <header class="container">
+        <logo>MoGo</logo>
         <nav>
-            <logo>MoGo</logo>
             <ul class="nav-menu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Service</a></li>
@@ -29,8 +29,8 @@
         <section class="services">
             <h2 class="services-title"><span>We work with</span>amazing servises</h2>
             <ul class="services-list">
-                <li class="services-list-item">
-                    <div class="icon icon-01"></div>
+                <li class="services-list-item icon icon-01">
+                    <!-- <div class="icon icon-01"></div> -->
                     <div class="service-description">
                         <h3>Photography</h3>
                         <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -91,16 +91,16 @@
                         <div class="overlay">
                             <ul class="social-buttons">
                                 <li>
-                                    <button class="button button-facebook"></button>
+                                    <a href="#" class="button button-facebook"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-twitter"></button>
+                                    <a href="#" class="button button-twitter"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-pinterest"></button>
+                                    <a href="#" class="button button-pinterest"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-insta"></button>
+                                    <a href="#" class="button button-insta"></a>
                                 </li>
                             </ul>
                         </div>
@@ -116,16 +116,16 @@
                         <div class="overlay">
                             <ul class="social-buttons">
                                 <li>
-                                    <button class="button button-facebook"></button>
+                                    <a href="#" class="button button-facebook"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-twitter"></button>
+                                    <a href="#" class="button button-twitter"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-pinterest"></button>
+                                    <a href="#" class="button button-pinterest"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-insta"></button>
+                                    <a href="#" class="button button-insta"></a>
                                 </li>
                             </ul>
                         </div>
@@ -142,16 +142,16 @@
                         <div class="overlay">
                             <ul class="social-buttons">
                                 <li>
-                                    <button class="button button-facebook"></button>
+                                    <a href="#" class="button button-facebook"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-twitter"></button>
+                                    <a href="#" class="button button-twitter"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-pinterest"></button>
+                                    <a href="#" class="button button-pinterest"></a>
                                 </li>
                                 <li>
-                                    <button class="button button-insta"></button>
+                                    <a href="#" class="button button-insta"></a>
                                 </li>
                             </ul>
                         </div>
