changed logo mark up

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="container">
-        <logo>MoGo</logo>
+        <a href="#">MoGo</a>
         <nav>
             <ul class="nav-menu">
                 <li><a href="#">About</a></li>
